@@ -1,4 +1,10 @@
-$Id: ChangeLog 4373 2017-01-11 21:36:39Z chrfranke $
+$Id: ChangeLog 4375 2017-01-12 20:31:48Z chrfranke $
+
+2017-01-12  Christian Franke  <franke@computer.org>
+
+	drivedb.h:
+	- Innodisk 1ME3/3ME/3SE SSDs: Rename, add 1ME3 (ticket #713), 3SE
+	- Innodisk 3IE2/3ME2/3MG2/3SE2 SSDs: Rename, add 3ME2
 
 2017-01-11  Christian Franke  <franke@computer.org>
 
